--- a/LAB01/work1.html
+++ b/LAB01/work1.html
@@ -27,7 +27,7 @@
         <br>
         <button type="button" id='howBtn' class="btn-minecraft">คู่มือ</button>
         <br>
-        <a type="button" id='homeBtn' class="btn-minecraft" style="text-decoration: none;" href="https://nightwaris.github.io/web-2566/">หน้าหลัก</a>
+        <a type="button" id='homeBtn' class="btn-minecraft" style="text-decoration: none;" href="https://sarisa-28.github.io/web-2566/">หน้าหลัก</a>
     </div>
 
     <div id='view2' class='container text-center p-5'>
