--- a/LAB02/work2.html
+++ b/LAB02/work2.html
@@ -17,10 +17,10 @@
     <a-text value="Work 2" position="0 -5 -2.2"
       animation="property: position; to: -1 1.5 -2.2; dur: 2000; easing: linear; loop: false"></a-text>
 
-    <a-text value="Warissara Phanrod" position="-5 1 -2" baseline="bottom"
+    <a-text value="Sarisa Thungthong" position="-5 1 -2" baseline="bottom"
       animation="property: position; to: -1 0.5 -2.2; dur: 8000; easing: linear; loop: false"></a-text>
 
-    <a-text value="643020642-8" position="-9 0.5 -5" baseline="bottom"
+    <a-text value="643021438-2" position="-9 0.5 -5" baseline="bottom"
       animation="property: position; to: -1 1 -2.2; dur: 8000; easing: linear; loop: false"></a-text>
 
     <a-sky color="#ECFFFF" src="#view" radius="400"></a-sky>
