update index and add work 3

--- a/LAB03/work3.html
+++ b/LAB03/work3.html
@@ -46,7 +46,7 @@
                     max-width="280"
                     title="Back to Index"
                     prepend-icon="mdi-github"
-                    href="https://undainthanatekku.github.io/web-2566/index.html"
+                    href="https://sarisa-28.github.io/web-2566/"
                     target="_blank"
                     rel="noopener"
             ></v-card>
@@ -66,7 +66,7 @@
       data() {
         return {
             title: "Work 3: เกมจับคู่ภาพ โดยใช้ VueJS",
-            footer: "643020659-1 อันดา อินทะเนตร CS-VIP",
+            footer: "643021438-2 Sarisa Thungthong CS-VIP",
             state: 0,
             cards: [],
             cards_opened: [],
