--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
 
     <div id='Headder' class='pd1'>
         <h1 class="t1">Exercise</h1><br>
-        <p class="t2">1. WORK 1 : <a class="t3" href="https://undainthanatekku.github.io/web-2566/LAB01/work1.html">เกมจับคู่ภาพ ด้วย JQuery + Boostrap</a></p>
-        <p class="t2">2. WORK 2 : <a class="t3" href="https://undainthanatekku.github.io/web-2566/LAB02/work2.html">WebVR with A-Frame</a></p>
-        <p class="t2">3. WORK 3 : <a class="t3" href="https://undainthanatekku.github.io/web-2566/LAB03/work3.html">เกมจับคู่ภาพ โดยใช้ VueJS</a></p>
+        <p class="t2">1. WORK 1 : <a class="t3" href="https://sarisa-28.github.io/web-2566/LAB01/work1.html">เกมจับคู่ภาพ ด้วย JQuery + Boostrap</a></p>
+        <p class="t2">2. WORK 2 : <a class="t3" href="https://sarisa-28.github.io/web-2566/LAB02/work2.html">Vr with A-Frame</a></p>
+        <p class="t2">3. WORK 3 : <a class="t3" href="https://sarisa-28.github.io/web-2566/LAB03/work3.html">สร้างเกมจับคู่ภาพโดยใช้  VueJS Vuetify</a></p>
         <p class="t2">4. WORK 4 : </p>
         <p class="t2">5. WORK 5 : </p>
 
     </div><br>
 
-    <div id='Profile' class="p1 text-center">
+    <div id='Profile'>
       <h1 class="pt1">Profile</h1><br>
-      <img src='LAB01/src/me.jpg' style='width: 150px; height: 150px;' class="mx-auto d-block">
+      <img src='LAB01/src/me.jpg' style='width: 150px; height: 150px;'>
       <br>
-      <p class="pt2"> NAME : Unda Inthanate</p>
-      <p class="pt2"> ID : 643020659-1</p>
-      <p class="pt2"> EMAIL : unda.i@kkumail.com ( CS-VIP ) </p>
+      <p class="pt2"> NAME : Sarisa Thungthong</p>
+      <p class="pt2"> ID : 643021438-2</p>
+      <p class="pt2"> EMAIL : sarisa.t@kkumail.com ( CS-VIP ) </p>
       <p class="pt2"> College of Computing Khon Kaen University </p>
   </div>
   
