--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p class="t2">1. WORK 1 : <a class="t3" href="https://sarisa-28.github.io/web-2566/LAB01/work1.html">เกมจับคู่ภาพ ด้วย JQuery + Boostrap</a></p>
         <p class="t2">2. WORK 2 : <a class="t3" href="https://sarisa-28.github.io/web-2566/LAB02/work2.html">Vr with A-Frame</a></p>
         <p class="t2">3. WORK 3 : <a class="t3" href="https://sarisa-28.github.io/web-2566/LAB03/work3.html">สร้างเกมจับคู่ภาพโดยใช้  VueJS Vuetify</a></p>
-        <p class="t2">4. WORK 4 : </p>
+        <p class="t2">4. WORK 4 : <a class="t3" href="https://sarisa-28.github.io/web-2566/LAB04/work4.html">เกมจับคู่ภาพ ด้วย ReactJS</a></p>
         <p class="t2">5. WORK 5 : </p>
 
     </div><br>
