--- a/LAB05/work5.html
+++ b/LAB05/work5.html
@@ -70,7 +70,7 @@
         <div class="left-panel">
             <h2>VDO ตัวอย่าง : </h2>
             <video controls muted>
-                <source src=few.mp4" type="video/mp4">
+                <source src="few.mp4" type="video/mp4">
             </video>
         </div>
     </section>
