--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         <p class="t2">3. WORK 3 : <a class="t3" href="https://sarisa-28.github.io/web-2566/LAB03/work3.html">สร้างเกมจับคู่ภาพโดยใช้  VueJS Vuetify</a></p>
         <p class="t2">4. WORK 4 : <a class="t3" href="https://sarisa-28.github.io/web-2566/LAB04/work4.html">เกมจับคู่ภาพ ด้วย ReactJS</a></p>
         <p class="t2">5. WORK 5 : <a class="t3" href="https://sarisa-28.github.io/web-2566/LAB05/work5.html">React Native App</a></p> 
-    </div><br>
+        <p class="t2">6. WORK 6.1 : <a class="t3" href="https://sarisa-28.github.io/web-2566/LAB06/work6.html"> เรียกใช้ฐานข้อมูล Firebase ด้วย ReactJS</a></p>
+        <p class="t2">6. WORK 6.2 : <a class="t3" href="https://sarisa-28.github.io/web-2566/LAB06/work6_vue.html"> เรียกใช้ฐานข้อมูล Firebase ด้วย VueJS</a></p>
+      </div><br>
 
     <div id='Profile'>
       <h1 class="pt1">Profile</h1><br>
