--- a/LAB06/work6_vue.html
+++ b/LAB06/work6_vue.html
@@ -119,7 +119,7 @@
             data() {
                 return {
                     title: "Work 6:  เรียกใช้ฐานข้อมูล Firebase ด้วย VueJS",
-                    footer: "643021425-1 ปิยะพร ภูแต้มนิล College of Computing, Khon Kaen University",
+                    footer: "643021438-2 Sarisa Thungthong College of Computing, Khon Kaen University",
                     students: [],
                     editstd: {},
                     editmode: 0,
